--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,1 +1,64 @@
 @import "bootstrap/scss/bootstrap";
+
+.daily-song-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #121212;
+  color: white;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+}
+
+.daily-song-title {
+  font-size: 20px;
+  letter-spacing: 3px;
+  margin-bottom: 20px;
+  display: inline-block;
+  padding-bottom: 5px;
+  font-weight: bold;
+}
+
+.song-info {
+  .song-name {
+    letter-spacing: 1px;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .song-artist {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    color: #1db954;
+  }
+
+  img {
+    width: 300px;
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 4px solid currentColor; /* Färgar kanten med aktuell textfärg */
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  color: #1db954;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
