fixed API from spotify and got the 5 recommended songs from the account.

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -34,12 +34,6 @@
     margin-bottom: 20px;
     color: #1db954;
   }
-
-  img {
-    width: 300px;
-    border-radius: 10px;
-    margin-top: 20px;
-  }
 }
 
 .loader {
@@ -121,4 +115,6 @@
       }
     }
   }
-  
+  .album-art{
+    width: 450px;
+  }
