--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -10,42 +10,52 @@
   color: white;
   font-family: "Arial", sans-serif;
   text-align: center;
-}
 
-.daily-song-title {
-  font-size: 20px;
-  letter-spacing: 3px;
-  margin-bottom: 20px;
-  display: inline-block;
-  padding-bottom: 5px;
-  font-weight: bold;
-}
-
-.song-info {
-  .song-name {
-    letter-spacing: 1px;
-    font-size: 1rem;
+  .daily-song-title {
+    font-size: 20px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
     font-weight: bold;
-    margin-bottom: 10px;
+
   }
 
-  .song-artist {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+  .song-info {
+    position: relative;
+    display: inline-block;
+  
+    .album-art {
+      width: 300px;
+      display: block;
+    }
+  
+    .like-heart {
+      position: absolute;
+      top: 50%; 
+      right: -50%; 
+      transform: translateY(-50%); 
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      transition: transform 0.3s;
+  
+      &:hover {
+        transform: translateY(-50%) scale(1.2); // Lägg till hover-effekt
+      }
+    }
+  }
+  
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 4px solid currentColor; // Färgar kanten med aktuell textfärg
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
     color: #1db954;
   }
-}
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 4px solid currentColor; /* Färgar kanten med aktuell textfärg */
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-  color: #1db954;
 }
 
 @keyframes rotation {
@@ -58,63 +68,63 @@
 }
 
 .logout-btn {
-    position: absolute; 
-    top: 20px; 
-    right: 20px;
-    padding: 8px 16px;
-    font-size: 12px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #17a74e;
+  color: #e0e0e0;
+  border: none;
+  letter-spacing: 2px;
+  border-radius: 30px;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
+
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.mood-selection-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #121212;
+  color: white;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+
+  h1 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding-bottom: 5px;
     font-weight: bold;
-    background-color: #17a74e;
-    color: #e0e0e0;
-    border: none;
-    letter-spacing: 2px;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s, box-shadow 0.3s;
   }
 
-  .mood-selection-container {
+  .mood-buttons {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #121212;
-    color: white;
-    font-family: "Arial", sans-serif;
-    text-align: center;
-  
-    h1 {
-      margin-bottom: 20px;
-      font-size: 20px;
-      letter-spacing: 3px;
-      margin-bottom: 20px;
-      display: inline-block;
-      padding-bottom: 5px;
-      font-weight: bold;
-    }
-  
-    .mood-buttons {
-      display: flex;
-      gap: 10px;
-  
-      button {
-        padding: 10px 20px;
-        font-size: 35px;
-        border: none;
-        background-color: #121212;
-        border-radius: 40px;
-        cursor: pointer;
-        transition: transform 0.3s;
-  
-        &:hover {
-          transform: scale(1.1);
-          background-color: #17a74e;
-        }
+    gap: 10px;
+
+    button {
+      padding: 10px 20px;
+      font-size: 35px;
+      border: none;
+      background-color: #121212;
+      border-radius: 40px;
+      cursor: pointer;
+      transition: transform 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+        background-color: #17a74e;
       }
     }
   }
-  .album-art{
-    width: 450px;
-  }
+}
