--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -48,9 +48,24 @@
 
 .like-heart {
   position: relative;
+  background-color: #121212;
   width: 40px;
   height: 40px;
   cursor: pointer;
+
+  &:hover {
+    transform: translateY(-20%) scale(1.0); 
+  }
+
+}
+
+.delete{
+  position: relative;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background-color: rgb(73, 73, 73);
+  border-radius: 50px;
 
   &:hover {
     transform: translateY(-20%) scale(1.0); 
@@ -164,5 +179,63 @@
       color: #b3b3b3;
       margin-bottom: 5px;
     }
+  }
+}
+
+
+.gallery-container {
+  display: flex;
+  gap: 20px; 
+  overflow-x: auto; 
+  padding-bottom: 10px;
+  scrollbar-width: thin; 
+  scrollbar-color: #17a74e transparent;
+
+  &::-webkit-scrollbar {
+    height: 8px; 
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #17a74e; 
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+}
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px; 
+  text-align: center;
+  color: white;
+  background-color: #222; 
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+
+  .gallery-image {
+    width: 100%; 
+    border-radius: 5px;
+    margin-bottom: 10px;
+    transition: transform 0.3s;
+  }
+
+  .gallery-image:hover {
+    transform: scale(1.1);
+  }
+
+  .song-name {
+    font-size: 0.9rem;
+    font-weight: bold;
+    margin: 5px 0;
+  }
+
+  .song-artist {
+    font-size: 0.8rem;
+    color: #17a74e;
   }
 }
