--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,7 +1,7 @@
 @import "bootstrap/scss/bootstrap";
 
 body {
-  background-color: #121212 !important;
+  background-color:#f8f3f3 !important;
   color: white !important;
   font-family: Arial, sans-serif !important;
 }
@@ -12,8 +12,8 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #121212;
-  color: white;
+  background-color: #f8f3f3;
+  color: rgb(7, 7, 7);
   font-family: "Arial", sans-serif;
   text-align: center;
 
@@ -59,7 +59,7 @@ body {
   position: absolute;
   top: 50%; /* Justera vertikalt */
   right: -50%; /* Flytta till höger */
-  background-color: #121212;
+  background-color: #f8f3f3;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -71,7 +71,7 @@ body {
 
 .close{
   position: relative;
-  background-color: #121212;
+  background-color:#f8f3f3;
   width: 50px;
   height: 50px;
   position: absolute;
@@ -147,8 +147,8 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #121212;
-  color: white;
+  background-color:#f8f3f3;
+  color: black;
   font-family: "Arial", sans-serif;
   text-align: center;
 
@@ -190,8 +190,8 @@ body {
 
 .liked-songs-section {
   height: 100vh;
-  background-color: #121212;
-  color: white;
+  background-color: #f8f3f3;
+  color: black;
   font-family: "Arial", sans-serif;
   padding-left: 40px;
   padding-bottom: 40px;
@@ -233,8 +233,8 @@ body {
   align-items: center;
   width: 250px; 
   text-align: center;
-  color: white;
-  background-color: #222; 
+  color: black;
+  background-color: #ece7e7; 
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
@@ -270,6 +270,7 @@ body {
   h1 {
     margin-bottom: 20px;
     font-size: 20px;
+    color: black;
     letter-spacing: 3px;
     padding-bottom: 5px;
     font-weight: bold;
@@ -332,6 +333,7 @@ body {
   width: 40px;
   height: 40px;
   background-color: #922692;
+  color: #f8f3f3;
   border: none;
   border-radius: 30px;
   cursor: pointer;
@@ -362,7 +364,7 @@ body {
   a {
     display: block;
     padding: 10px 15px;
-    color: #ffffff; 
+    color: white; 
     text-decoration: none;
     font-size: 14px;
 
@@ -372,6 +374,38 @@ body {
   }
 
   &.hidden {
-    display: none; /* Dölj dropdown när den inte är aktiv */
+    display: none; 
+  }
+}
+.share-song {
+  text-align: center;
+
+  h3 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #333;
+  }
+
+  .social-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    a,
+    button {
+      background: none;
+      border: none;
+      cursor: pointer;
+
+      .icon {
+        width: 25px;
+        height: 25px;
+        transition: transform 0.2s ease;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+    }
   }
 }
