--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -34,8 +34,10 @@
     }
   
     .album-art {
+      display: block;
       width: 400px;
       padding: 10px;
+      margin: 0 auto; 
       border-radius: 20px;
       transition: transform 0.3s ease;
 
@@ -48,8 +50,8 @@
 
 .like-heart {
   position: absolute;
-  top: 50%; /* Justera vertikalt */
-  right: -50%; /* Flytta till höger */
+  top: 50%; 
+  right: -50%; 
   background-color: #f8f3f3;
   width: 50px;
   height: 50px;
@@ -157,7 +159,6 @@
       padding: 10px 20px;
       font-size: 35px;
       border: none;
-      background-color: #121212;
       border-radius: 40px;
       cursor: pointer;
       transition: transform 0.3s;
@@ -277,7 +278,7 @@
     height: 370px;
     justify-content: space-between;
     border-radius: 10px;
-    overflow: hidden;
+  
 
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -414,8 +415,8 @@
 }
 
 .user-avatar {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   margin-bottom: 20px;
 }
@@ -472,9 +473,15 @@ body.dark {
   .user-profile{
     background-color: #343434;
   }
+  .mood-buttons button {
+    background-color: #1d1c1c;
+  }
+  .titleFront {
+    background-color: #fff;
+  }
 
   .like-heart, .close {
-    background-color: #1d1c1c !important; 
+    background-color:  #1d1c1c !important; 
     color: #fff; 
   }
 }
@@ -486,6 +493,12 @@ body.light {
 
   h1, h3 {
     color: #000 !important; 
+  }
+  .titleFront {
+    background-color: #000;
+  }
+  .mood-buttons button {
+    background-color: #f8f3f3
   }
 
   .like-heart, .close {
@@ -510,3 +523,118 @@ body.light {
 
 }
 
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Halvtransparent bakgrund */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; 
+}
+
+/* Modal content */
+.modal-content {
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 300px; 
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.modal-content h2 {
+  margin-bottom: 20px;
+}
+
+.modal-content input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.modal-buttons button {
+  flex: 1;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  width: 50px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-buttons button:first-child {
+  background-color:#922692;
+  color: white;
+  width: 50px;
+}
+
+.modal-buttons button:last-child {
+  background-color:#922692;
+  color: white;
+  width: auto; 
+}
+
+.create-playlist-container button{
+  color: #922692;
+  padding: 8px;
+  font-size: 25px;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  background: none;
+}
+
+.menu-container {
+  position: relative;
+}
+
+.menu-button {
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.menu-dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  transform: translateX(40%);
+  min-width: 150px;
+  overflow: visible;
+}
+
+.menu-dropdown button {
+  width: 100%;
+  background: none;
+  border: none;
+  padding: 10px;
+  text-align: left;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.menu-dropdown button:hover {
+  background: #f5f5f5;
+}
