--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   font-family: "Arial", sans-serif;
   text-align: center;
 
@@ -198,6 +199,7 @@
 
 .gallery-container {
   display: flex;
+  width: 100%;
   overflow-x: auto;
   gap: 30px; 
   flex-wrap: wrap;
