--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -18,6 +18,10 @@
     font-weight: bold;
   }
 
+  .song-name{
+    max-width: 400px;
+  }
+
   .song-info {
     display: flex;
     position: relative;
@@ -553,7 +557,7 @@ body.light {
   }
 
   .menu-button{
-    color: #fff;
+    color: #000;
   }
 
 }
@@ -688,4 +692,46 @@ body.light {
 
 .menu-dropdown button:hover {
   background: #f5f5f5;
+}
+
+.statistics-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  color: #ffffff;
+  font-family: 'Arial', sans-serif;
+  padding: 20px;
+
+  h1 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding-bottom: 5px;
+    font-weight: bold;
+  }
+
+  p {
+    font-size: 1.2rem;
+    margin: 10px 0;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  }
+}
+
+p {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
