--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -140,10 +140,18 @@
   }
 }
 
-.logout-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+.header {
+  display: flex;
+  justify-content: flex-end; /* Flytta knappar till höger */
+  align-items: center; /* Centrera vertikalt */
+  gap: 20px; /* Mellanrum mellan knappar */
+  padding: 20px;
+  background-color: transparent; /* Om det behövs */
+  z-index: 1; /* Säkerställ att det visas ovanpå */
+}
+
+.logout-btn,
+.theme-switch-btn {
   padding: 8px 16px;
   font-size: 12px;
   font-weight: bold;
@@ -155,11 +163,12 @@
   cursor: pointer;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s, box-shadow 0.3s;
+}
 
-  &:hover {
-    transform: scale(1.1);
-    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
-  }
+.logout-btn:hover,
+.theme-switch-btn:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
 }
 
 .mood-selection-container {
@@ -231,6 +240,7 @@
   display: flex;
   flex-wrap: wrap;
   overflow-x: auto;
+  margin-bottom: 10%;
   gap: 30px; 
   width: 100%;
   height: 100vh;
@@ -301,7 +311,7 @@
     font-size: 20px;
     color: black;
     letter-spacing: 3px;
-    padding-bottom: 5px;
+ 
     font-weight: bold;
   }
 
@@ -311,7 +321,6 @@
     gap: 20px;
 
     justify-items: center;
-    padding-bottom: 10%;
   }
 
   .gallery-item {
@@ -541,7 +550,7 @@ body.light {
   background-color: #f8f3f3;
   color: #000 !important; 
 
-  h1, h3 {
+  h1, h3, p {
     color: #000 !important; 
   }
   .titleFront {
@@ -559,22 +568,6 @@ body.light {
   .menu-button{
     color: #000;
   }
-
-}
-
-.theme-switch-btn {
-  position: absolute;
-  top: 20px;
-  left: 67rem;
-  width: 40px;
-  height: 40px;
-  padding: 7px 10px;
-  border: none;
-  background-color: #922692;
-  color: white;
-  cursor: pointer;
-  border-radius: 15px;
-
 
 }
 
