--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -140,18 +140,10 @@
   }
 }
 
-.header {
-  display: flex;
-  justify-content: flex-end; /* Flytta knappar till höger */
-  align-items: center; /* Centrera vertikalt */
-  gap: 20px; /* Mellanrum mellan knappar */
-  padding: 20px;
-  background-color: transparent; /* Om det behövs */
-  z-index: 1; /* Säkerställ att det visas ovanpå */
-}
-
-.logout-btn,
-.theme-switch-btn {
+.logout-btn{
+  position: absolute;
+  top: 20px;
+  right: 20px;
   padding: 8px 16px;
   font-size: 12px;
   font-weight: bold;
@@ -163,12 +155,11 @@
   cursor: pointer;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s, box-shadow 0.3s;
-}
 
-.logout-btn:hover,
-.theme-switch-btn:hover {
-  transform: scale(1.1);
-  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .mood-selection-container {
@@ -240,7 +231,6 @@
   display: flex;
   flex-wrap: wrap;
   overflow-x: auto;
-  margin-bottom: 10%;
   gap: 30px; 
   width: 100%;
   height: 100vh;
@@ -262,7 +252,7 @@
   overflow-y: visible;
   position: relative;
   flex-wrap: nowrap; 
-  padding-bottom: 30%;
+  padding-bottom: 5%;
 }
 
 .gallery-item {
@@ -727,4 +717,27 @@ p {
   to {
     opacity: 1;
   }
+}
+
+@keyframes throwEffect {
+  0% {
+    transform: translateX(0) rotate(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(150px) rotate(45deg);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(300px) rotate(90deg);
+    opacity: 0;
+  }
+}
+
+.throwing {
+  animation: throwEffect 1s ease-out forwards;
+}
+
+.close-button.throwing {
+  animation: throwEffect 1s ease-out forwards;
 }
