fixed userId for every user

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -795,6 +795,11 @@ p {
   }
 }
 
+.statistics-period{
+  padding: 10px;
+  padding-bottom: 20px;
+}
+
 .throwing {
   animation: throwEffect 0,5s ease-out forwards;
 }
